--- a/style.css
+++ b/style.css
@@ -1,5 +1,17 @@
+:root {
+  --main-bg-color: #131313;
+  --border-color: #bbf706;
+  --memo-bg-color: #bbf70629;
+}
+
+/* :root {
+  --main-bg-color: #000000;
+  --border-color: #06f3f7;
+  --memo-bg-color: #06f3f729;
+} */
+
 @font-face {
-  font-family: "panama";
+  font-family: "pixel";
   src: url(./Advanced_Pixel-7.woff2) format("woff2");
 }
 
@@ -7,7 +19,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "panama";
+  font-family: "pixel";
 }
 
 main {
@@ -16,7 +28,7 @@ main {
   left: 0;
   width: 100%;
   height: 100vh;
-  background: #121212;
+  background: var(--main-bg-color);
 }
 
 .board {
@@ -31,8 +43,8 @@ main {
 
 .memo {
   position: absolute;
-  border: 1px solid #bbf706;
-  background-color: #bbf70629;
+  border: 1px solid var(--border-color);
+  background-color: var(--memo-bg-color);
   will-change: left top;
 }
 
@@ -42,7 +54,7 @@ main {
   left: 0;
   width: 100%;
   height: 16px;
-  border-bottom: 1px solid #bbf706;
+  border-bottom: 1px solid var(--border-color);
   cursor: grab;
 }
 
@@ -52,7 +64,7 @@ main {
   top: 0;
   height: 100%;
   width: 16px;
-  border-right: 1px solid #bbf706;
+  border-right: 1px solid var(--border-color);
   background-color: black;
   cursor: pointer;
 }
@@ -63,9 +75,9 @@ main {
   right: 0;
   width: 10px;
   height: 10px;
-  border-top: 1px solid #bbf706;
-  border-left: 1px solid #bbf706;
-  z-index: 2;
+  border-top: 1px solid var(--border-color);
+  border-left: 1px solid var(--border-color);
+  z-index: 0;
   cursor: se-resize;
 }
 
@@ -89,10 +101,18 @@ main {
   z-index: 0;
   resize: none;
   background-color: transparent;
-  color: #bbf706;
-  /* font: "panama"; */
-  font-family: "panama";
+  color: var(--border-color);
+  font-family: "pixel";
   font-size: 18px;
   padding: 5px;
   outline: none;
+}
+
+canvas {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  width: calc(100% - 20px);
+  height: calc(100% - 20px);
+  z-index: -1;
 }
