--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
-:root {
+/* :root {
   --main-bg-color: #131313;
   --border-color: #bbf706;
   --memo-bg-color: #bbf70629;
-}
-/* 
+} */
+
 :root {
   --main-bg-color: #000000;
-  --border-color: #06f3f7;
-  --memo-bg-color: #06f3f761;
-} */
+  --border-color: #fcc42a;
+  --memo-bg-color: #fcc42a29;
+}
 
 /* :root {
   --main-bg-color: #000000;
